--- a/index.html
+++ b/index.html
@@ -4,122 +4,140 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .inline-button {
+            display: inline-block;
+        }
+        .border-div {
+            border: 2px solid black; 
+            padding: 10px; 
+            margin: 10px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <a href=""><img src="" alt="">ADRASTEAI</a>
-        <button><img src="" alt=""></button>
-    </header>
-    <main>
-        <section>
-            <h1>Детективно-информационное агентство</h1>
-            <p>Владеешь информацией - владеешь миром</p>
+<header>
+    <a href="#"><img src="" alt="">ADRASTEAI</a>
+    <button><img src="" alt=""></button>
+</header>
+<main>
+    <section>
+        <h1>Детективно-информационное агентство</h1>
+        <p>Владеешь информацией - владеешь миром</p>
+        <div>
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+        <button><span>Оформить заявку<img src="" alt=""></span></button>
+    </section>
+    <section>
+        <h2>Услуги</h2>
+        <p>Когда другие бессильны - мы делаем</p>
+        <div>
+            <button class="inline-button">Работа с информацией</button>
+            <button class="inline-button">Розыск</button>
+            <button class="inline-button">Слежка</button>
+        </div>
+        <div>
+            <img src="" alt="">
+            <h3>Работа с информацией</h3>
+            <ul>
+                <li>Поиск и проверка информации</li>
+                <li>Составление персонального досье</li>
+                <li>Работа с репутацией (защита персональных данных)</li>
+                <li>Информация по номеру телефона</li>
+            </ul>
+            <button><span>Оформить заявку<img src="" alt=""></span></button>
+        </div>
+        <div>
+            <img src="" alt="">
+            <h3>Розыск</h3>
+            <ul>
+                <li>Розыск должника/мошенника</li>
+                <li>Поиск пропавших людей</li>
+                <li>Поиск родственников</li>
+                <li>Поиск имущества</li>
+            </ul>
+            <button><span>Оформить заявку<img src="" alt=""></span></button>
+        </div>
+        <div>
+            <img src="" alt="">
+            <h3>Слежка и наблюдение</h3>
+            <ul>
+                <li>Наружное наблюдение</li>
+                <li>Контрнаблюдение</li>
+                <li>Проверка образа жизни ребенка</li>
+            </ul>
+            <button><span>Оформить заявку<img src="" alt=""></span></button>
+        </div>
+        <div>
+            <img src="" alt="">
+            <h3>Бизнес разведка</h3>
+            <ul>
+                <li>Проверка контагентов</li>
+                <li>Досье на компанию</li>
+                <li>Внештатная лужба безопастности</li>
+                <li>Корпоративное расследование</li>
+            </ul>
+            <button><span>Оформить заявку<img src="" alt=""></span></button>
+        </div>
+    </section>
+    <section>
+        <h2>Как мы работаем</h2>
+        <div class="border-div">
+            <img src="" alt="">
+            <p>Разбираемся в ситуации</p>
+        </div>
+        <div class="border-div">
+            <img src="" alt="">
+            <p>Составляем план действий</p>
+        </div>
+        <div class="border-div">
+            <img src="" alt="">
+            <p>Предоставляем результат</p>
+        </div>
+    </section>
+    <section>
+        <h2>Наши Клиенты</h2>
+        <p>Строго соблюдаем конфиденциальность и дорожим репутацией каждого клиента</p>
+        <div>
+            <img src="" alt="">
+            <p>Политики</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>Бизнес</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>Селебрити</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>Частные лица</p>
+        </div>
+    </section>
+    <section>
+        <h2>Связаться с нами </h2>
+        <form action="/submit_form" method="post">
+            <label for="name"></label>
+            <input type="text" id="name" name="user_name" placeholder="Ваше имя" required>
+            <label for="mail"></label>
+            <input type="email" id="mail" name="user_mail" placeholder="example@exp.com" required>
+            <label for="tel"></label>
+            <input type="tel" id="tel" name="user_tel" placeholder="Ваш телефон" required>
             <div>
-                <img src="" alt="">
-                <img src="" alt="">
-            </div>
-            <button>
-                <span>Оформить заявку<img src="" alt=""></span>
-            <button>
-        </section>
-        <section>
-            <h2>Услуги</h2>
-            <p>Когда другие бессильны - мы делаем</p>
-            <div>
-                <button style="display: inline-block;">Работа с информацией</button>
-                <button style="display: inline-block;">Розыск</button>
-                <button style="display: inline-block;">Слежка</button>
+                <button type="submit">Связаться с нами</button>
             </div>
             <div>
-                <img src="" alt="">
-                <P>Работа с информацией</P>
-                <p>- Поиск и проверка информации</p>
-                <p>- Составление персонального досье</p>
-                <p>- Работа с репутацией (защита персональных данных)</p>
-                <p>- Информация по номеру телефона</p>
-                <button><span>Оформить заявку<img src="" alt=""></span><button>
+                <img src="images/Icon.svg" alt=""><p>Согласие на обработку персональных данных</p>
             </div>
-            <div>
-                <img src="" alt="">
-                <P>Розыск</P>
-                <p>- Розыск должника/мошенника</p>
-                <p>- Поиск пропавших людей</p>
-                <p>- Поиск родственников</p>
-                <p>- Поиск имуществаа</p>
-                <button><span>Оформить заявку<img src="" alt=""></span><button>
-            </div>
-            <div>
-                <img src="" alt="">
-                <P>Слежка и наблюдение</P>
-                <p>- Наружное наблюдение/p>
-                <p>- Контрнаблюдение</p>
-                <p>- Проверка образа жизни ребенка</p>
-                <button><span>Оформить заявку<img src="" alt=""></span><button>
-            </div>
-            <div>
-                <img src="" alt="">
-                <P>Бизнес разведка</P>
-                <p>- Проверка контагентов</p>
-                <p>- Досье на компанию</p>
-                <p>- Внештатная лужба безопастности</p>
-                <p>- копаротивное расследование</p>
-                <button><span>Оформить заявку<img src="" alt=""></span><button>
-            </div>
-        </section>
-        <section>
-            <h1>Как мы работаем</h1>
-            <div style="border:2px solid black; padding:10px; margin:10px;">
-                <img src="" alt="">
-                <p>Разбираемся в ситуации</p>
-            </div>
-            <div>
-                <img src="" alt="">
-                <p>Составляем план действий</p>
-            </div>
-            <div>
-                <img src="" alt="">
-                <p>Предоставляем результат</p>
-            </div>
-        </section>
-        <section>
-            <h3>Наши Клиенты</h3>
-            <p>Строго соблюдаем конфиденциальность и дорожим репутацией каждого клиента</p>
-            <div>
-                <img src="" alt="">
-                <p>Политики</p>
-            </div>
-            <div>
-                <img src="" alt="">
-                <p>Бизнес</p>
-            </div>
-            <div>
-                <img src="" alt="">
-                <p>Селебрити</p>
-            </div>
-            <div>
-                <img src="" alt="">
-                <p>Частные лица</p>
-            </div>
-        </section>
-        <section>
-            <h4>Связаться с нами </h4>
-            <form action="/submit_form" method="post">
-                Имя<input type="text" id="name" name="user_name" placeholder="Ваше имя" required>
-                example@exp.com<input type="email" id="mail" name="user_mail" placeholder="Ваша почта" required>
-                номер телефона<input type="tel" id="tel" name="user_tel" placeholder="Ваш телефон" required>
-                <div>
-                    <button type="submit">Связаться с нами</button>
-                </div>
-                <div>
-                    <img src="images/Icon.svg" alt=""><p>Согласие на обработку персональных данных</p>
-                </div>
-            </form>
-        </section>
-        </main>
-        <footer>
-            <div><a href="">Дизайн и разработка Karanikola</a><a href="">Дизайн и разработка Karanikola</a></div>
-            <p>© 2022</p>
-
-        </footer>
-        </body>
-        </html>
+        </form>
+    </section>
+</main>
+<footer>
+    <div><a href="#">Дизайн и разработка Karanikola</a><a href="#">Дизайн и разработка Karanikola</a></div>
+    <p>© 2022</p>
+</footer>
+</body>
+</html>
